--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-simple-deploy",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "bin/index.js",
   "scripts": {
@@ -18,8 +18,9 @@
   "homepage": "https://github.com/cao1987/web-simple-deploy#readme",
   "dependencies": {
     "archiver": "^6.0.1",
+    "chalk": "^4.1.2",
+    "inquirer": "^5.2.0",
     "ora": "^5.4.1",
-    "single-line-log": "^1.1.2",
     "ssh2": "^1.14.0"
   }
 }
